Fixed scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -122,9 +122,32 @@ pre div span {
   form {
     width: 70vw;
   }
-} 
+}
+
 @media screen and (max-width: 450px) {
   form {
     width: 100%;
   }
-} 
+}
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #1f1e1e #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #1f1e1e;
+  border-radius: 10px;
+  border: 3px solid #ffffff;
+}
